--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,36 +184,6 @@
   --space-2xl: clamp(4.5rem, calc(4.36rem + 0.95vw), 5.5rem);
   --space-3xl: clamp(6.75rem, calc(6.54rem + 1.43vw), 8.25rem);
 
-  --space-3xs-2xs: clamp(0.31rem, calc(0.26rem + 0.36vw), 0.69rem);
-  --space-2xs-xs: clamp(0.56rem, calc(0.49rem + 0.48vw), 1.06rem);
-  --space-xs-s: clamp(0.88rem, calc(0.8rem + 0.48vw), 1.38rem);
-  --space-s-m: clamp(1.13rem, calc(0.99rem + 0.89vw), 2.06rem);
-  --space-m-l: clamp(1.69rem, calc(1.54rem + 1.01vw), 2.75rem);
-  --space-l-xl: clamp(2.25rem, calc(1.98rem + 1.79vw), 4.13rem);
-  --space-xl-2xl: clamp(3.38rem, calc(3.07rem + 2.02vw), 5.5rem);
-  --space-2xl-3xl: clamp(4.5rem, calc(3.96rem + 3.57vw), 8.25rem);
-
-  --space-3xs-xs: clamp(0.31rem, calc(0.21rem + 0.71vw), 1.06rem);
-  --space-2xs-s: clamp(0.56rem, calc(0.45rem + 0.77vw), 1.38rem);
-  --space-xs-m: clamp(0.88rem, calc(0.71rem + 1.13vw), 2.06rem);
-  --space-s-l: clamp(1.13rem, calc(0.89rem + 1.55vw), 2.75rem);
-  --space-m-xl: clamp(1.69rem, calc(1.34rem + 2.32vw), 4.13rem);
-  --space-l-2xl: clamp(2.25rem, calc(1.79rem + 3.1vw), 5.5rem);
-  --space-xl-3xl: clamp(3.38rem, calc(2.68rem + 4.64vw), 8.25rem);
-
-  --space-3xs-s: clamp(0.31rem, calc(0.16rem + 1.01vw), 1.38rem);
-  --space-2xs-m: clamp(0.56rem, calc(0.35rem + 1.43vw), 2.06rem);
-  --space-xs-l: clamp(0.88rem, calc(0.61rem + 1.79vw), 2.75rem);
-  --space-s-xl: clamp(1.13rem, calc(0.7rem + 2.86vw), 4.13rem);
-  --space-m-2xl: clamp(1.69rem, calc(1.14rem + 3.63vw), 5.5rem);
-  --space-l-3xl: clamp(2.25rem, calc(1.39rem + 5.71vw), 8.25rem);
-
-  --space-3xs-m: clamp(0.31rem, calc(0.06rem + 1.67vw), 2.06rem);
-  --space-2xs-l: clamp(0.56rem, calc(0.25rem + 2.08vw), 2.75rem);
-  --space-xs-xl: clamp(0.88rem, calc(0.41rem + 3.1vw), 4.13rem);
-  --space-s-2xl: clamp(1.13rem, calc(0.5rem + 4.17vw), 5.5rem);
-  --space-m-3xl: clamp(1.69rem, calc(0.75rem + 6.25vw), 8.25rem);
-
   --h1: clamp(2.8rem, calc(2.37rem + 2.85vw), 5.79rem);
   --h2: clamp(2.33rem, calc(2.05rem + 1.91vw), 4.34rem);
   --h3: clamp(1.94rem, calc(1.76rem + 1.25vw), 3.26rem);
@@ -362,6 +332,7 @@ a {
   text-decoration: none;
   background-color: transparent;
   border-bottom: 2px solid transparent;
+  transition: border-bottom 200ms linear;
 }
 
 a:focus {
