--- a/styles/lost.module.css
+++ b/styles/lost.module.css
@@ -3,9 +3,23 @@
 }
 
 .article {
-  margin: var(--space-s-xl);
+  margin: var(--space-s);
 }
 
 .article p {
   max-width: 80ch;
+}
+
+/* 640px */
+@media (min-width: 40em) {
+  .article {
+    margin: var(--space-l);
+  }
+}
+
+/* 960px */
+@media (min-width: 60em) {
+  .article {
+    margin: var(--space-xl);
+  }
 }
