--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -3,7 +3,7 @@
 }
 
 .nav {
-  margin: var(--space-s) var(--space-s-xl);
+  margin: var(--space-s);
 }
 
 .mobile {
@@ -15,6 +15,7 @@
   gap: var(--space-l);
   padding: var(--space-l);
   background-color: var(--color-teal-1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .mobile li {
@@ -25,8 +26,19 @@
   display: none;
 }
 
+/* 640px */
+@media (min-width: 40em) {
+  .nav {
+    margin: var(--space-s) var(--space-l);
+  }
+}
+
 /* 960px */
 @media (min-width: 60em) {
+  .nav {
+    margin: var(--space-s) var(--space-xl);
+  }
+
   .nav button {
     display: none;
   }
