--- a/styles/globals.css
+++ b/styles/globals.css
@@ -194,6 +194,8 @@
 
   --head: "Viaoda Libre", "Viaoda Libre-fallback", serif;
   --body: "Nanum Myeongjo", "Nanum Myeongjo-fallback", serif;
+
+  --shadow: 0px 0.1px 0.1px hsl(168 36% 58% / 0.34), 0px 0.5px 0.6px -0.4px hsl(168 36% 58% / 0.34), 0px 0.9px 1px -0.7px hsl(168 36% 58% / 0.34), 0.1px 1.5px 1.7px -1.1px hsl(168 36% 58% / 0.34), 0.1px 2.4px 2.7px -1.4px hsl(168 36% 58% / 0.34), 0.2px 3.7px 4.2px -1.8px hsl(168 36% 58% / 0.34), 0.2px 5.6px 6.3px -2.1px hsl(168 36% 58% / 0.34), 0.4px 8.3px 9.3px -2.5px hsl(168 36% 58% / 0.34);
 }
 
 @font-face {
@@ -297,15 +299,10 @@ body {
   color: var(--color-teal-6);
   background-color: var(--color-teal-1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 1s ease-out;
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-block-size: 100%;
-}
-
-main {
-  display: block;
 }
 
 :where(h1, h2, h3, h4, h5) {
@@ -332,14 +329,14 @@ a {
   text-decoration: none;
   background-color: transparent;
   border-bottom: 2px solid transparent;
-  transition: border-bottom 200ms linear;
+  outline-offset: 4px;
 }
 
 a:focus {
   outline: var(--color-aquamarine-3) solid 4px;
 }
 
-:where(img, svg, video, canvas, audio, iframe, embed, object) {
+:where(main, img, svg, video, canvas, audio, iframe, embed, object) {
   display: block;
 }
 
