--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -1,3 +1,7 @@
+.main {
+  align-self: center;
+}
+
 .article {
   margin: var(--space-s);
 }
@@ -6,24 +10,26 @@
   display: grid;
   grid-template-columns: minmax(0, 1fr);
   gap: var(--space-s);
+  max-width: 40ch;
   margin: 0 auto;
 }
 
-.article :is([type="text"], [type="email"], textarea) {
-  display: block;
-  width: 100%;
-  padding: 0.2rem 0.6rem;
-  background-color: var(--color-teal-2);
-  border: none;
-  outline: transparent solid 4px;
+.article :is(button, input, textarea) {
+  padding: 0.6rem 1rem;
 }
 
-.article :is([type="text"], [type="email"], textarea):focus {
+.article :is(input, textarea) {
+  display: block;
+  width: 100%;
+  background-color: var(--color-teal-2);
+  border: none;
+}
+
+.article :is(input, textarea):focus {
   outline: var(--color-aquamarine-3) solid 4px;
 }
 
 .article button {
-  padding: 0.4rem 1rem;
   color: var(--color-teal-1);
   background-color: var(--color-teal-6);
 }
@@ -32,14 +38,6 @@
 @media (min-width: 40em) {
   .article {
     margin: var(--space-l);
-  }
-
-  .main {
-    align-self: center;
-  }
-
-  .article form {
-    max-width: 50%;
   }
 }
 
