--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -9,14 +9,8 @@
   margin: var(--space-s);
 }
 
-.nav > div:nth-child(2) {
-  display: flex;
-  gap: var(--space-m);
-}
-
-.nav > div:nth-child(2) a {
-  display: inline;
-  vertical-align: middle;
+.nav button {
+  padding: 0.2rem;
 }
 
 .mobile {
@@ -28,7 +22,7 @@
   gap: var(--space-l);
   padding: var(--space-l);
   background-color: var(--color-teal-1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: var(--shadow);
 }
 
 .mobile li {
